# clp-ffi-go

./: README.rst  go.mod  go.sum
cpp/: CMakeLists.txt  deps.bzl
cpp/src/ffi_go/ir/: LogTypes.hpp  decoder.cpp  deserializer.cpp  encoder.cpp  serializer.cpp  serializer.h
cpp/src/ffi_go/search/: wildcard_query.cpp
demo/: main.go
ffi/: BUILD.bazel  ffi.go
ir/: BUILD.bazel  cgo_defs.go  decoder.go  deserializer.go  encoder.go  ir.go  ir_test.go  reader.go  reader_test.go  serder_test.go  serializer.go  writer.go  writer_test.go  writeread_test.go
search/: BUILD.bazel  wildcard_query.go
