load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ir",
    srcs = [
       "*.go",
    ],
    cgo = True,
    cdeps = [
        "//:libclp_ffi",
    ],
    importpath = "github.com/y-scope/clp-ffi-go/ir",
    visibility = ["//visibility:public"],
    deps = [
        "//ffi",
        "//search",
    ],
)

alias(
    name = "go_default_library",
    actual = ":ir",
    visibility = ["//visibility:public"],
)

go_test(
    name = "ir_test",
    srcs = [
        "*.go",
    ],
    embed = [":ir"],
    deps = [
        "@com_github_klauspost_compress//zstd",
    ],
)
